--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-grid-only-css": "^4.1.3",
     "ngx-pagination": "^6.0.3",
     "ngx-ui-loader": "^13.0.0",
+    "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
