loader report in admin dashboar

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@canvasjs/angular-charts": "^1.0.1",
     "@ckeditor/ckeditor5-angular": "^6.0.0",
     "@ckeditor/ckeditor5-build-classic": "^37.0.1",
+    "angular-datatables": "^17.0.0",
     "bootstrap-grid-only-css": "^4.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "ngx-pagination": "^6.0.3",
     "ngx-ui-loader": "^13.0.0",
     "primeng": "^16.4.2",
@@ -36,7 +40,9 @@
     "@angular-devkit/build-angular": "^16.2.5",
     "@angular/cli": "~16.2.5",
     "@angular/compiler-cli": "^16.2.8",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
