--- a/angular.json
+++ b/angular.json
@@ -24,13 +24,16 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ 
+            "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-
-              "./node_modules/bootstrap-grid-only-css/dist/css/bootstrap-grid.min.css"
+              "./node_modules/bootstrap-grid-only-css/dist/css/bootstrap-grid.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.min.js"
+            ]
           },
           "configurations": {
             "production": {
