--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "mat-table-exporter": "^10.2.4",
     "ngx-pagination": "^6.0.3",
     "ngx-ui-loader": "^13.0.0",
     "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
