--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-build-classic": "^37.0.1",
     "angular-datatables": "^17.0.0",
     "bootstrap-grid-only-css": "^4.1.3",
+    "canvasjs": "^1.8.3",
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
