--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "jwt-decode": "^4.0.0",
     "mat-table-exporter": "^10.2.4",
     "ngx-pagination": "^6.0.3",
     "ngx-ui-loader": "^13.0.0",
